Fixed footer position, add main video into categories, changed music for travels, delete extra space on the main page

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 .footerStyle {
     background-color: #000115;
     color: whitesmoke;
-    /* position: fixed; */
     bottom: 0;
     width: 100%;
     padding-top: 0%;
     padding-bottom: 0%;
+    position: fixed;
 }
