--- a/src/components/GridContainer/Gridcontainer.css
+++ b/src/components/GridContainer/Gridcontainer.css
@@ -1,11 +1,12 @@
 .position {
     width: 100%;
     max-height: 200px;
+    /* position: fixed; */
 }
 
 .imageContainer {
-    background-color: rgb(27, 2, 17);
-    height: 100vh;
+    background-color:rgb(92, 63, 92);
+    /*height: 100vh;*/
     display: flex;
     justify-content: center;
     align-items: center;
