--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
     left: 0;
     width:100%;
     background: url('../../img/bar/chameleon.jpg');
-    height: 56px;
+    height: 63px;
     border-radius: 1%;
 }
 
